Fix layout and spacing

--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -49,7 +49,8 @@ li a.blurbLink:hover {
 
 @media only screen and (min-width: $tablet-mid) {
   .about {
-    padding: 10rem;
+    // padding: 10rem;
+    padding: 2rem 10rem 4rem;
   }
 
   .description ul {
