--- a/src/components/Hero/styles.module.scss
+++ b/src/components/Hero/styles.module.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   justify-content: center;
 
+  margin-top: 2.5rem;
   width: 100vw;
   min-height: 100vh;
 
