--- a/src/components/NavBar/styles.module.scss
+++ b/src/components/NavBar/styles.module.scss
@@ -11,7 +11,7 @@
   z-index: 9999;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 2.5rem;
 
   padding: 1.25rem 0;
