--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -18,11 +18,11 @@
 
 html, body {
   box-sizing: border-box;
-  min-width: 100%;
+  min-width: 100vw;
   min-height: 100vh;
   margin: 0px;
   padding: 0px;
-  // overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 html {
